fix for layout issue for more textboxes
see #44

--- a/sites/all/themes/heybabies/sass/_main.scss
+++ b/sites/all/themes/heybabies/sass/_main.scss
@@ -1808,6 +1808,7 @@ div.messages
             border: 0;
             font-size: 1em;
             width: 63.666%;
+            height: 36px;
             padding: 0 1.5%;
             outline-color: $seafoam;
             line-height: 2;
